--- a/style.css
+++ b/style.css
@@ -1,21 +1,29 @@
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .top{
     border:0 solid #fff;
     height:1499px;
-    width:375px;
+    width:100%;
     margin:auto;
 }
  .headr{
     display:flex;
     justify-content:space-between;
     align-items: center;
+    background-color: #ffffff;
+    position: sticky;
+    top:2px ;
 
  }
  .figma-logo{
     width:40px ;
-    height:35px; 
+    height:60px; 
     padding:8px 8px ;
 }
+
 .menu-bar{
     width:36px ;
     height:36px; 
@@ -27,20 +35,18 @@
     border:2px solid #d9d9d9;
     background-color: #f5f5f5;
     height: 496px; 
-    width: 375px;
+    width: 100%;
 }
 
 .words{
         font-family: "Manrope", sans-serif;
           font-optical-sizing: auto;
           font-weight:bolder;
-          font-size:48px ; 
+          font-size:3rem ; 
           font-style:100%;
           line-height:120% ;
           color: #1e1e1e;
-          padding-top:160px ;
-          padding-left:80px ;
-          padding-right:80px ;
+          padding:160px ,80px,0,80px;
           display: flex;
          flex-direction: column;
          align-items: center;     
@@ -56,7 +62,7 @@
          text-align: center;
         font-family: "Manrope", sans-serif;
     color: #757575;
-    font-size:28px ;
+    font-size:2rem ;
     font-weight:700px;
     font-optical-sizing: auto;
     margin-bottom:32px ;
@@ -75,37 +81,45 @@
 
 .first-child {
   background-color: #e3e3e3;
-  border:2px solid #767676;
+  border:2px solid invisible;
   border-radius:8px ;
   color: #1e1e1e;
   width:112px ;
-         height: 40px; 
+         height: 5vh; 
          padding: 10px 20px;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: bold;
+}
+.first-child:hover {
+  background-color: #d0d0d0;
+  border-color: #5a5a5a;
   cursor: pointer;
 }
-
 .last-child {
   background-color: #2c2c2c;
   border-radius:8px ;
   color: #f5f5f5;
   width:112px ;
-         height: 40px; 
+         height: 5vh; 
          padding: 10px 20px;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: bold;
-  border:2px solid #2c2c2c;
+  border:2px solid invisible;
   cursor :pointer;
 }
-
+.last-child:hover {
+  background-color: #1a1a1a;
+  border-color: #4d4d4d;
+  color: #ffffff;
+  cursor: pointer;
+}
 
 
 /*footer*/
 
 .zero{
     border: 2px solid #ffffff82;
-    width:375px;
+    width:100%;
     margin: auto;
 }
 .footer{
@@ -124,7 +138,7 @@
 
 .figma-logo-two{
     width:40px ;
-    height:35px; 
+    height:60px; 
     padding:8px 8px ;
 }
 .futr-tu{
@@ -134,33 +148,39 @@
 }
 
 .x-logo{
-    width:25px ;
-    height:25px; 
+    width:40px;
+    height:40px; 
     padding:8px 8px ;
 }
 .insta-logo{
-    width:30px ;
-    height:30px; 
+    width:40px ;
+    height:40px; 
     padding:8px 8px ;
 }
 .yt-logo{
-    width:36px ;
-    height:36px; 
+    width:40px ;
+    height:40px; 
     padding:8px 8px ;
 }
 .linkedin-logo{
-    width:30px ;
-    height:30px; 
+    width:40px ;
+    height:40px; 
     padding:8px 8px ;
     border-radius:15px ;
 }
-.ending{
+.item {
+    font-size: 1.5rem;
+    padding: 15px 0 0 0;
+
+}
+.ending {
     display:flex;
-    justify-content:start;
+    justify-content:space-evenly;
     align-items:start;
     flex-direction: column;
     border:0 solid #fff;
-    padding:8px 0 ;
-    gap:24px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    gap:48px;
+   }
+.dark-mode {
+  background-color: black;
+  color: white;}
